feat: cotação usando yahoo rest
